# otus-highload-social-network

./: Cargo.toml  Dockerfile  Otus Highload 1.postman_collection.json  README.md  build.rs  docker-compose.yaml  example.http  install-cli.sh  migrate-local.sh  prepare-sqlx.env  prepare-sqlx.ps1  with_file_env_entrypoint.sh
cfg/: application.yml  compose.yml
migrations/: V1__init.sql  V2__sessions.sql  V3__sessions_expire_not_null.sql  V4__unique_login.sql
src/: auth.rs  config.rs  domain.rs  main.rs  pool.rs
src/extensions/: mod.rs
src/handlers/: mod.rs  rejection_handler.rs  user_handler.rs
src/repo/: auth_repository.rs  mod.rs  session_repository.rs  user_repository.rs
