[package]
name = "otus_highload_social_network_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = "2.3.0"
sqlx = { version = "0.7.4" }
confique = { version = "0.2.5", features = ["serde_yaml"] }
confique-macro = "0.0.9"
serde = "1.0.203"
serde_json = "1.0.120"
tracing = { version =  "0.1.40" }
log = { version =  "0.4.22", features = ["kv", "kv_serde"] }
structured-logger = "1.0.3"
tap = "1.0.1"
